--- a/style.css
+++ b/style.css
@@ -32,3 +32,48 @@ header{
         align-items: center;
         padding-top: 10px;
     }
+
+
+
+.form-container{
+    max-width: 600px;
+    margin: 20px auto;
+}
+
+
+.form .form-group input{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: 1px solid red;
+}
+
+.form .form-group select{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: 1px solid red;
+}
+
+.form .form-group button{
+    padding: 10px 20px;
+    font-size: 0.8rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 100%;
+    background-color: black;
+    color: white;
+}
+
+span{
+    padding: 10px 20px;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    
+    width: 100%;
+}
